# tx8-vcc

./: Makefile  Makefile.am  Makefile.in  README  aclocal.m4  config.h  config.status  configure  configure.in  libtool  tx8-vcc2.desktop  tx8-vcc2.desktop.in  tx8-vcc2.gladep  tx8-vcc2.prj  tx8-vcc2.prj.bak  tx8-vcc2.pws
autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
data/: about.glade.bak  about.gladep  settings.glade  settings.glade.bak  settings.glade.orig  settings.gladep  tx8-vcc_glade.glade.bak  tx8-vcc_glade.glade.vertic  tx8-vcc_glade.gladep
include/: Makefile  Makefile.am  Makefile.in  callbacks.h  tx8_vcc.h
macros/: Makefile  Makefile.in
pixmaps/: Makefile  Makefile.am  Makefile.in
src/: Makefile  Makefile.am  Makefile.in  main.cpp  tx8_main.cpp
src/.deps/: main.Po  msocket.Po
