## Process this file with automake to produce Makefile.in

## Created by Anjuta - will be overwritten
## If you don't want it to overwrite it,
## 	Please disable it in the Anjuta project configuration

tx8_vcc2_includedir = $(pkgincludedir)

tx8_vcc2_include_DATA = \
	callbacks.h\
	msocket.h

EXTRA_DIST = $(tx8_vcc2_include_DATA)
