## Process this file with automake to produce Makefile.in

## Created by Anjuta - will be overwritten
## If you don't want it to overwrite it,
## 	Please disable it in the Anjuta project configuration

tx8_vcc2_pixmapsdir = $(prefix)/@NO_PREFIX_PACKAGE_PIXMAPS_DIR@

tx8_vcc2_pixmaps_DATA = \
	bender.png\
	kivio.png

EXTRA_DIST = $(tx8_vcc2_pixmaps_DATA)
