## Process this file with automake to produce Makefile.in

## Created by Anjuta - will be overwritten
## If you don't want it to overwrite it,
## 	Please disable it in the Anjuta project configuration

INCLUDES = \
	$(PACKAGE_CFLAGS)\
	 -I../include

AM_CFLAGS =\
	 -Wall\
	 -g

AM_CXXFLAGS =\
	 -Wall\
	 -g

bin_PROGRAMS = tx8-vcc2

tx8_vcc2_SOURCES = \
	main.cpp\
	msocket.cpp

tx8_vcc2_LDFLAGS = 

tx8_vcc2_LDADD =  \
	$(PACKAGE_LIBS)

